--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,55 +4,76 @@
 
 body {
   background-image: $linear-gradient;
-  // overflow: hidden;
+  overflow: hidden;
   font-family: $poppins;
 
   .container {
-    margin: 16px 0.5rem;
+    margin: 16px 8px;
 
     & header {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
       background-color: #d8d8d8;
-      padding: 0 18px;
       border-radius: 20px 20px 0 0;
-      height: 50px;
       box-shadow: 0px 2.2px 1.9px rgba(0, 0, 0, 0.036);
 
-      & .logo {
-        @include flex-center-center;
-
-        img {
-          height: 25px;
-        }
-      }
-
-      & .search {
+      & .header-container {
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 18px;
+        height: 50px;
+        margin: 0 auto;
 
-        & .input-field .search__box {
-          background-color: $white-light;
-          width: 120px;
-          height: 25px;
-          padding: 12px 12px;
-          border-radius: 15px 0 0 15px;
-          border: none;
+        & .logo {
+          @include flex-center-center;
 
-          &:focus-visible {
-            outline: none;
+          img {
+            height: 35px;
           }
         }
 
-        & button.search__icon {
-          @include flex-center-center;
-          width: 25px;
-          height: 25px;
+        & .search {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+
+          & .input-field .search__box {
+            background-color: $white-light;
+            width: 120px;
+            height: 25px;
+            padding: 12px 12px;
+            border-radius: 5px 0 0 5px;
+            border: none;
+
+            &:focus-visible {
+              outline: none;
+            }
+          }
+
+          & button.search__icon {
+            @include flex-center-center;
+            width: 25px;
+            height: 25px;
+            background-image: $linear-gradient;
+            border-radius: 0 5px 5px 0;
+            border: none;
+
+            & i {
+              color: $white-light;
+              transform: scale(0.8);
+            }
+          }
+        }
+
+        & .bookmarks {
           background-image: $linear-gradient;
-          border-radius: 0 15px 15px 0;
-          border: none;
+          color: $white-light;
+          font-size: 14px;
+          height: 25px;
+          width: 25px;
+          border-radius: 15px;
+          padding: 14px;
+          @include flex-center-center;
 
           & i {
             color: $white-light;
@@ -60,31 +81,18 @@ body {
           }
         }
       }
-
-      & .bookmarks {
-        background-image: $linear-gradient;
-        height: 25px;
-        width: 25px;
-        border-radius: 15px;
-        padding: 14px;
-        @include flex-center-center;
-
-        & i {
-          color: $white-light;
-          transform: scale(0.7);
-        }
-      }
     }
 
     & section {
       background-color: $white-light;
+      margin: 0 auto;
       padding: 30px 0;
       border-radius: 0 0 20px 20px;
-      height: calc(100vh - (96px));
+      height: calc(100vh - (90px));
 
       & .search-container {
         max-width: 200px;
-        margin: auto;
+        margin: 0 auto;
       }
     }
   }
@@ -94,17 +102,15 @@ footer {
   @include flex-center-center;
   position: absolute;
   color: $white-light;
-  font-size: 14px;
+  font-size: 12px;
   bottom: 0;
   left: 0;
   width: 100%;
-  padding: 8px 0;
+  padding: 3px 0;
 
   span i {
     color: #df477f;
   }
-
-  span.name {
-    text-decoration: underline;
-  }
 }
+
+@import 'media';
