Added bookmarks html structure, styled bookmarks, added transition to bookmarks open/close, added event to open/close bookmarks sidebar

--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -13,7 +13,7 @@
             }
           }
 
-          & .bookmarks {
+          & .bookmarks-btn {
             width: 125px;
           }
         }
