--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -4,7 +4,7 @@
     .container {
       & header {
         & .header-container {
-          max-width: 800px;
+          max-width: 700px;
 
           & .search {
             & .input-field .search__box {
@@ -30,4 +30,19 @@
 
 //Laptops
 @media (min-width: 1366px) {
+  body {
+    .container {
+      & header {
+        & .header-container {
+          max-width: 900px;
+        }
+      }
+
+      & section {
+        & .search-container {
+          max-width: 900px;
+        }
+      }
+    }
+  }
 }
