--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -97,7 +97,7 @@ body {
       height: calc(100vh - (90px));
 
       & .search-container {
-        max-width: 200px;
+        max-width: 300px;
         margin: 0 auto;
       }
     }
@@ -119,7 +119,7 @@ footer {
   }
 }
 
-.bookmarks-overlay {
+.overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -171,6 +171,99 @@ footer {
 
   .bookmarks-container {
     overflow-y: scroll;
+    padding-left: 18px;
+    max-width: 330px;
+  }
+}
+
+section .search-container {
+  display: flex;
+  gap: 32px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0 18px;
+}
+
+.book-info {
+  position: absolute;
+  top: 16px;
+  left: 8px;
+  right: 8px;
+  bottom: 0px;
+  background-color: $white-light;
+  border-radius: 20px 20px 0 0;
+  transform: translateY(+100%);
+  transition: all 150ms ease-out 200ms;
+  z-index: 1000;
+
+  &.active {
+    transform: translateY(0%);
+  }
+
+  & .close i {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    transform: scale(1.5);
+    color: #df477f;
+    cursor: pointer;
+  }
+
+  & .container {
+    max-width: 300px;
+    margin: 0 auto;
+    padding-top: 32px;
+
+    & .book-header {
+      padding-bottom: 18px;
+
+      & .title-bookmark {
+        display: flex;
+        flex-direction: row;
+        gap: 12px;
+
+        span {
+          background-image: $linear-gradient;
+          color: $white-light;
+          font-size: 14px;
+          height: 25px;
+          width: 25px;
+          border-radius: 15px;
+          padding: 14px;
+          @include flex-center-center;
+          cursor: pointer;
+
+          & i {
+            color: $white-light;
+            transform: scale(0.8);
+          }
+        }
+      }
+
+      & h1 {
+        font-size: 24px;
+        font-family: $ubuntu;
+        color: #4b4b4b;
+        padding-bottom: 8px;
+      }
+
+      & h2 {
+        color: #6b6b6b;
+      }
+      & h3 {
+        font-size: 10px;
+      }
+    }
+
+    & h2 {
+      font-size: 12px;
+      color: #4b4b4b;
+    }
+
+    & h3 {
+      font-size: 12px;
+      color: #6b6b6b;
+    }
   }
 }
 
