--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,3 +2,6 @@ $ubuntu: 'Ubuntu', sans-serif;
 $poppins: 'Poppins', sans-serif;
 $linear-gradient: linear-gradient(to right, #487eb0, #5e78b3);
 $white-light: #faf7ff;
+$white-grey: #d8d8d8;
+$red-shade-1: #df477f;
+$black-dark: #4b4b4b;
