--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,7 +23,7 @@ body {
         margin: 0 auto;
 
         .logo {
-          & img {
+          img {
             @include flex-center-center;
             height: 35px;
           }
@@ -46,7 +46,7 @@ body {
             }
           }
 
-          & button {
+          button {
             cursor: pointer;
           }
 
@@ -58,7 +58,7 @@ body {
             border-radius: 0 5px 5px 0;
             border: none;
 
-            & i {
+            i {
               color: $white-light;
               transform: scale(0.8);
             }
@@ -76,7 +76,7 @@ body {
           @include flex-center-center;
           cursor: pointer;
 
-          & i {
+          i {
             color: $white-light;
             transform: scale(0.8);
           }
@@ -84,7 +84,7 @@ body {
       }
     }
 
-    & section {
+    section {
       background-color: $white-light;
       margin: 0 auto;
       padding: 30px 0;
@@ -102,266 +102,383 @@ body {
       }
     }
   }
-}
 
-footer {
-  @include flex-center-center;
-  position: absolute;
-  color: $white-grey;
-  font-size: 12px;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  padding: 3px 0;
+  footer {
+    @include flex-center-center;
+    position: absolute;
+    color: $white-grey;
+    font-size: 12px;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 3px 0;
 
-  & span i {
-    color: $red-shade-1;
-  }
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  backdrop-filter: blur(3px);
-  background-color: rgba(51, 51, 51, 0.2);
-  display: none;
-
-  &.active {
-    display: block;
-  }
-}
-
-.bookmarks {
-  position: absolute;
-  top: 16px;
-  left: 0px;
-  bottom: 22px;
-  background-color: $white-light;
-  width: 350px;
-  z-index: 999;
-  border-radius: 0 20px 20px 0;
-  transform: translateX(-100%);
-  transition: all 150ms linear;
-
-  &.active {
-    transform: translate(0%);
+    span i {
+      color: $red-shade-1;
+    }
   }
 
-  .bookmarks-header {
-    position: relative;
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    backdrop-filter: blur(3px);
+    background-color: rgba(51, 51, 51, 0.2);
+    display: none;
 
-    & h1 {
-      font-size: 26px;
-      color: $black-dark;
-      padding: 18px 18px 24px 18px;
+    &.active {
+      display: block;
+    }
+  }
+
+  .bookmarks {
+    position: absolute;
+    top: 16px;
+    left: 0px;
+    bottom: 22px;
+    background-color: $white-light;
+    width: 350px;
+    z-index: 999;
+    border-radius: 0 20px 20px 0;
+    transform: translateX(-100%);
+    transition: all 150ms linear;
+
+    &.active {
+      transform: translate(0%);
     }
 
-    & span i {
-      position: absolute;
-      top: 18px;
-      right: 18px;
+    .bookmarks-header {
+      position: relative;
+
+      h1 {
+        font-size: 26px;
+        color: $black-dark;
+        padding: 18px 18px 24px 18px;
+      }
+
+      span i {
+        position: absolute;
+        top: 18px;
+        right: 18px;
+        transform: scale(1.5);
+        color: $red-shade-1;
+        cursor: pointer;
+      }
+    }
+
+    .bookmarks-container {
+      overflow-y: scroll;
+      padding-left: 18px;
+      max-width: 330px;
+    }
+  }
+
+  // *Show book information based on workId
+  .book-info {
+    position: absolute;
+    top: 16px;
+    left: 8px;
+    right: 8px;
+    bottom: 0px;
+    background-color: $white-light;
+    border-radius: 20px 20px 0 0;
+    transform: translateY(+100%);
+    transition: all 150ms ease-out 200ms;
+    z-index: 1000;
+    overflow-y: scroll;
+
+    &.active {
+      transform: translateY(0%);
+    }
+
+    .close i {
+      position: fixed;
+      top: 12px;
+      right: 12px;
       transform: scale(1.5);
       color: $red-shade-1;
       cursor: pointer;
     }
-  }
 
-  .bookmarks-container {
-    overflow-y: scroll;
-    padding-left: 18px;
-    max-width: 330px;
-  }
-}
+    .container {
+      max-width: 300px;
+      margin: 0 auto;
+      padding-top: 32px;
 
-// *Book Information Styles
-.book-info {
-  position: absolute;
-  top: 16px;
-  left: 8px;
-  right: 8px;
-  bottom: 0px;
-  background-color: $white-light;
-  border-radius: 20px 20px 0 0;
-  transform: translateY(+100%);
-  transition: all 150ms ease-out 200ms;
-  z-index: 1000;
-  overflow-y: scroll;
+      .book-header {
+        padding-bottom: 18px;
 
-  &.active {
-    transform: translateY(0%);
-  }
-
-  & .close i {
-    position: fixed;
-    top: 12px;
-    right: 12px;
-    transform: scale(1.5);
-    color: $red-shade-1;
-    cursor: pointer;
-  }
-
-  & .container {
-    max-width: 300px;
-    margin: 0 auto;
-    padding-top: 32px;
-
-    .book-header {
-      padding-bottom: 4px;
-
-      & .title-bookmark {
-        display: flex;
-        flex-direction: row;
-        gap: 12px;
-
-        span {
-          background-image: $linear-gradient;
-          color: $white-light;
-          font-size: 14px;
-          height: 25px;
-          width: 25px;
-          border-radius: 15px;
-          padding: 14px;
-          @include flex-center-center;
-          cursor: pointer;
-
-          & i {
-            color: $white-light;
-            transform: scale(0.8);
-          }
-        }
-      }
-
-      & h1 {
-        font-size: 24px;
-        font-family: $ubuntu;
-        color: #4b4b4b;
-        padding-bottom: 8px;
-      }
-
-      & h2 {
-        font-size: 12px;
-        color: #6b6b6b;
-      }
-      & h3 {
-        font-size: 10px;
-        color: #6b6b6b;
-      }
-    }
-
-    & .book-body {
-      & .img-BScreen {
-        display: none;
-      }
-
-      & .na-BScreen {
-        @include na-box();
-      }
-
-      section.content {
-        hr {
-          margin: 16px 0;
-        }
-
-        & h2 {
-          font-size: 14px;
-          color: #4b4b4b;
-        }
-
-        & p {
-          font-size: 12px;
-          color: #6b6b6b;
-        }
-
-        & .meta-container {
+        .title-bookmark {
           display: flex;
+          flex-direction: row;
           gap: 12px;
 
-          & .na-SScreen {
-            @include na-box($height: 150px, $width: 115px);
+          span {
+            background-image: $linear-gradient;
+            color: $white-light;
+            font-size: 14px;
+            height: 25px;
+            width: 25px;
+            border-radius: 15px;
+            padding: 14px;
+            @include flex-center-center;
+            cursor: pointer;
+
+            i {
+              color: $white-light;
+              transform: scale(0.8);
+            }
+          }
+        }
+
+        h1 {
+          font-size: 24px;
+          font-family: $ubuntu;
+          color: #4b4b4b;
+          padding-bottom: 8px;
+        }
+
+        h2 {
+          font-size: 12px;
+          color: #6b6b6b;
+          padding-bottom: 4px;
+        }
+        h3 {
+          font-size: 10px;
+          color: #6b6b6b;
+        }
+      }
+
+      .book-body {
+        .img-BScreen {
+          display: none;
+        }
+
+        .na-BScreen {
+          @include na-box();
+        }
+
+        section.content {
+          hr {
+            margin: 16px 0;
           }
 
-          & a p {
-            color: #4c7db0;
-            text-decoration: underline;
+          h2 {
+            font-size: 14px;
+            color: #4b4b4b;
+          }
+
+          p {
             font-size: 12px;
+            color: #6b6b6b;
           }
 
-          & .meta {
+          .meta-container {
             display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            gap: 16px;
-            width: 100%;
+            gap: 12px;
 
-            & .author-publisher {
+            .na-SScreen {
+              @include na-box($height: 150px, $width: 115px);
+            }
+
+            a p {
+              color: #4c7db0;
+              text-decoration: underline;
+              font-size: 12px;
+            }
+
+            .meta {
               display: flex;
-              flex-direction: column;
-              justify-content: space-around;
-              & a {
-                display: block;
+              flex-direction: row;
+              justify-content: space-between;
+              gap: 16px;
+              width: 100%;
+
+              .author-publisher {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                & a {
+                  display: block;
+                }
+              }
+
+              .pages-isbn {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
               }
             }
-
-            & .pages-isbn {
-              display: flex;
-              flex-direction: column;
-              justify-content: space-around;
-            }
           }
-        }
 
-        & .description {
-          padding-bottom: 16px;
-        }
-
-        & .subjects {
-          padding-bottom: 16px;
-        }
-
-        & a {
-          color: #4c7db0;
-          text-decoration: underline;
-          font-size: 14px;
-        }
-
-        .find-notes {
-          @include flex-center-center;
-          flex-direction: column;
-          justify-content: center;
-
-          & .find-more {
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-            align-items: center;
+          .description {
             padding-bottom: 16px;
           }
 
-          & .notes textarea {
-            box-shadow: 3.1px 4.3px 3.9px -13px rgba(0, 0, 0, 0.023),
-              7.2px 10px 9px -13px rgba(0, 0, 0, 0.034),
-              12.9px 18px 16.2px -13px rgba(0, 0, 0, 0.041),
-              21.4px 29.9px 26.8px -13px rgba(0, 0, 0, 0.049),
-              35.2px 49.2px 44.2px -13px rgba(0, 0, 0, 0.056),
-              61.5px 86px 77.2px -13px rgba(0, 0, 0, 0.067),
-              133px 186px 167px -13px rgba(0, 0, 0, 0.09);
-            border: 2px solid #4b4b4b;
-            border-radius: 5px;
-            padding: 10px;
-            font-family: $poppins;
-            resize: none;
-            &:focus-visible {
-              outline: none;
-              border: 2px solid #4c7db0;
+          .subjects {
+            padding-bottom: 16px;
+          }
+
+          a {
+            color: #4c7db0;
+            text-decoration: underline;
+            font-size: 14px;
+          }
+
+          .find-notes {
+            @include flex-center-center;
+            flex-direction: column;
+            justify-content: center;
+
+            .find-more {
+              display: flex;
+              flex-direction: column;
+              gap: 8px;
+              align-items: center;
+              padding-bottom: 16px;
+            }
+
+            .notes textarea {
+              box-shadow: 3.1px 4.3px 3.9px -13px rgba(0, 0, 0, 0.023),
+                7.2px 10px 9px -13px rgba(0, 0, 0, 0.034),
+                12.9px 18px 16.2px -13px rgba(0, 0, 0, 0.041),
+                21.4px 29.9px 26.8px -13px rgba(0, 0, 0, 0.049),
+                35.2px 49.2px 44.2px -13px rgba(0, 0, 0, 0.056),
+                61.5px 86px 77.2px -13px rgba(0, 0, 0, 0.067),
+                133px 186px 167px -13px rgba(0, 0, 0, 0.09);
+              border: 2px solid #4b4b4b;
+              border-radius: 5px;
+              padding: 10px;
+              font-family: $poppins;
+              resize: none;
+              &:focus-visible {
+                outline: none;
+                border: 2px solid #4c7db0;
+              }
             }
           }
         }
       }
     }
   }
+}
+
+//Loading Spinner Animation
+.loadingio-spinner-double-ring-48jq6smvq69 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes ldio-r3slmbus1r {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.ldio-r3slmbus1r div {
+  box-sizing: border-box !important;
+}
+.ldio-r3slmbus1r > div {
+  position: absolute;
+  width: 72px;
+  height: 72px;
+  top: 14px;
+  left: 14px;
+  border-radius: 50%;
+  border: 8px solid #000;
+  border-color: #487eb0 transparent #487eb0 transparent;
+  animation: ldio-r3slmbus1r 1s linear infinite;
+}
+
+.ldio-r3slmbus1r > div:nth-child(2),
+.ldio-r3slmbus1r > div:nth-child(4) {
+  width: 54px;
+  height: 54px;
+  top: 23px;
+  left: 23px;
+  animation: ldio-r3slmbus1r 1s linear infinite reverse;
+}
+.ldio-r3slmbus1r > div:nth-child(2) {
+  border-color: transparent #3c4856 transparent #3c4856;
+}
+.ldio-r3slmbus1r > div:nth-child(3) {
+  border-color: transparent;
+}
+.ldio-r3slmbus1r > div:nth-child(3) div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform: rotate(45deg);
+}
+.ldio-r3slmbus1r > div:nth-child(3) div:before,
+.ldio-r3slmbus1r > div:nth-child(3) div:after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  top: -8px;
+  left: 24px;
+  background: #487eb0;
+  border-radius: 50%;
+  box-shadow: 0 64px 0 0 #487eb0;
+}
+.ldio-r3slmbus1r > div:nth-child(3) div:after {
+  left: -8px;
+  top: 24px;
+  box-shadow: 64px 0 0 0 #487eb0;
+}
+
+.ldio-r3slmbus1r > div:nth-child(4) {
+  border-color: transparent;
+}
+.ldio-r3slmbus1r > div:nth-child(4) div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform: rotate(45deg);
+}
+.ldio-r3slmbus1r > div:nth-child(4) div:before,
+.ldio-r3slmbus1r > div:nth-child(4) div:after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  top: -8px;
+  left: 15px;
+  background: #3c4856;
+  border-radius: 50%;
+  box-shadow: 0 46px 0 0 #3c4856;
+}
+.ldio-r3slmbus1r > div:nth-child(4) div:after {
+  left: -8px;
+  top: 15px;
+  box-shadow: 46px 0 0 0 #3c4856;
+}
+.loadingio-spinner-double-ring-48jq6smvq69 {
+  width: 51px;
+  height: 51px;
+  display: inline-block;
+  overflow: hidden;
+  background: none;
+}
+.ldio-r3slmbus1r {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(0.51);
+  backface-visibility: hidden;
+  transform-origin: 0 0; /* see note above */
+}
+.ldio-r3slmbus1r div {
+  box-sizing: content-box;
 }
 
 @import 'supports';
