--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -90,15 +90,16 @@ body {
       padding: 30px 0;
       border-radius: 0 0 20px 20px;
       height: calc(100vh - (98px));
+      overflow-y: scroll;
 
       .search-container {
         max-width: 300px;
         margin: 0 auto;
-        display: flex;
-        gap: 32px;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        padding: 0 18px;
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: flex-start;
+        row-gap: 18px;
+        padding: 0 32px;
       }
     }
   }
