--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -321,6 +321,11 @@ body {
             padding: 14px;
             @include flex-center-center;
             cursor: pointer;
+            transition: transform 100ms ease-out;
+
+            &:hover {
+              transform: scale(0.9);
+            }
 
             i {
               color: $white-light;
@@ -350,10 +355,14 @@ body {
       .book-body {
         .img-BScreen {
           display: none;
+          img {
+            border-radius: 5px;
+          }
         }
 
         .na-BScreen {
           @include na-box();
+          border-radius: 5px;
         }
 
         section.content {
@@ -375,8 +384,15 @@ body {
             display: flex;
             gap: 12px;
 
+            .img-SScreen {
+              img {
+                border-radius: 5px;
+              }
+            }
+
             .na-SScreen {
               @include na-box($height: 150px, $width: 115px);
+              border-radius: 5px;
             }
 
             a p {
@@ -436,22 +452,44 @@ body {
               padding-bottom: 16px;
             }
 
-            .notes textarea {
-              box-shadow: 3.1px 4.3px 3.9px -13px rgba(0, 0, 0, 0.023),
-                7.2px 10px 9px -13px rgba(0, 0, 0, 0.034),
-                12.9px 18px 16.2px -13px rgba(0, 0, 0, 0.041),
-                21.4px 29.9px 26.8px -13px rgba(0, 0, 0, 0.049),
-                35.2px 49.2px 44.2px -13px rgba(0, 0, 0, 0.056),
-                61.5px 86px 77.2px -13px rgba(0, 0, 0, 0.067),
-                133px 186px 167px -13px rgba(0, 0, 0, 0.09);
-              border: 2px solid #4b4b4b;
-              border-radius: 5px;
-              padding: 10px;
-              font-family: $poppins;
-              resize: none;
-              &:focus-visible {
+            .notes {
+              @include flex-center-center;
+              flex-direction: column;
+              gap: 18px;
+              margin-bottom: 18px;
+              textarea {
+                box-shadow: 3.1px 4.3px 3.9px -13px rgba(0, 0, 0, 0.023),
+                  7.2px 10px 9px -13px rgba(0, 0, 0, 0.034),
+                  12.9px 18px 16.2px -13px rgba(0, 0, 0, 0.041),
+                  21.4px 29.9px 26.8px -13px rgba(0, 0, 0, 0.049),
+                  35.2px 49.2px 44.2px -13px rgba(0, 0, 0, 0.056),
+                  61.5px 86px 77.2px -13px rgba(0, 0, 0, 0.067),
+                  133px 186px 167px -13px rgba(0, 0, 0, 0.09);
+                border: 2px solid #4b4b4b;
+                border-radius: 5px;
+                padding: 10px;
+                font-family: $poppins;
+                resize: none;
+                &:focus-visible {
+                  outline: none;
+                  border: 2px solid #4c7db0;
+                }
+              }
+
+              button.save {
                 outline: none;
-                border: 2px solid #4c7db0;
+                border: none;
+                width: fit-content;
+                padding: 4px 12px;
+                background-image: $linear-gradient;
+                color: $white-light;
+                border-radius: 5px;
+                cursor: pointer;
+                transition: transform 100ms ease-out;
+
+                &:hover {
+                  transform: scale(0.9);
+                }
               }
             }
           }
