Documented Javascript based on JSDoc, Seperated web component defination from controller to view, removed some bugs, added title attribute to book-item-component, made fetching a little faster

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,8 @@
+// Fonts
 $ubuntu: 'Ubuntu', sans-serif;
 $poppins: 'Poppins', sans-serif;
+
+// Colors
 $linear-gradient: linear-gradient(to right, #487eb0, #5e78b3);
 $white-light: #faf7ff;
 $white-grey: #d8d8d8;
