--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -116,7 +116,7 @@ body {
           width: fit-content;
           padding: 0 50px;
           p {
-            color: $black-dark;
+            color: $red-shade-1;
             font-size: 14px;
             text-align: center;
 
@@ -144,7 +144,7 @@ body {
           }
 
           p {
-            color: $white-light;
+            color: #78e08f;
             font-size: 14px;
             text-align: center;
 
@@ -268,6 +268,18 @@ body {
       p span i {
         color: $red-shade-1;
       }
+
+      p.error-msg {
+        color: $red-shade-1;
+        font-size: 12px;
+        text-align: center;
+        justify-content: center;
+
+        span i {
+          color: $red-shade-1;
+          transform: scale(1.2);
+        }
+      }
     }
   }
 
@@ -302,6 +314,18 @@ body {
       max-width: 300px;
       margin: 0 auto;
       padding-top: 52px;
+
+      p.error-msg {
+        color: $red-shade-1;
+        font-size: 12px;
+        text-align: center;
+        justify-content: center;
+
+        span i {
+          color: $red-shade-1;
+          transform: scale(1.2);
+        }
+      }
 
       .book-header {
         padding-bottom: 18px;
@@ -412,6 +436,7 @@ body {
                 display: flex;
                 flex-direction: column;
                 justify-content: space-around;
+                gap: 16px;
                 & a {
                   display: block;
                 }
@@ -421,6 +446,7 @@ body {
                 display: flex;
                 flex-direction: column;
                 justify-content: space-around;
+                gap: 16px;
               }
             }
           }
@@ -454,9 +480,38 @@ body {
 
             .notes {
               @include flex-center-center;
+              position: relative;
               flex-direction: column;
               gap: 18px;
               margin-bottom: 18px;
+
+              .message-s {
+                position: absolute;
+                bottom: 55px;
+                left: 40px;
+                width: fit-content;
+                padding: 5px 10px;
+                background-color: $black-dark;
+                border-radius: 15px;
+                opacity: 0;
+                transition: all 1000ms linear;
+
+                &.active {
+                  opacity: 1;
+                }
+
+                p.success-msg {
+                  color: #78e08f;
+                  font-size: 12px;
+                  text-align: center;
+
+                  span i {
+                    color: #78e08f;
+                    transform: scale(1.2);
+                  }
+                }
+              }
+
               textarea {
                 box-shadow: 3.1px 4.3px 3.9px -13px rgba(0, 0, 0, 0.023),
                   7.2px 10px 9px -13px rgba(0, 0, 0, 0.034),
