--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -98,7 +98,7 @@ body {
       margin: 0 auto;
       padding: 30px 0 20px 0;
       border-radius: 0 0 20px 20px;
-      height: calc(100vh - (96px));
+      height: calc(100vh - 96px);
       overflow-y: auto;
 
       .search-container {
@@ -199,6 +199,7 @@ body {
     width: 100%;
     padding-top: 2px;
     letter-spacing: 1px;
+    display: none;
 
     span i {
       color: $red-shade-1;
@@ -306,7 +307,7 @@ body {
     bottom: 0px;
     background-color: $white-light;
     border-radius: 20px 20px 0 0;
-    transform: translateY(+100%);
+    transform: translateY(+150%);
     transition: all 150ms ease-out 200ms;
     z-index: 1000;
     overflow-y: scroll;
